Certificates Page done

--- a/src/index.css
+++ b/src/index.css
@@ -197,9 +197,9 @@ article {
     --ionicon-stroke-width: 35px;
 }
 
-article {
+/* article {
     display: none;
-}
+} */
 
 article.active {
     display: block;
